manifests/harbor/netpol-nginx.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-nginx
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app: harbor
      component: nginx
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: cloudflared
            io.kubernetes.pod.namespace: argocd
        - matchLabels:
            image-build: "true"
            io.kubernetes.pod.namespace: image-build
        - matchLabels:
            app.kubernetes.io/component: admission-controller
            io.kubernetes.pod.namespace: kyverno
        - matchLabels:
            app.kubernetes.io/component: background-controller
            io.kubernetes.pod.namespace: kyverno
        - matchLabels:
            app.kubernetes.io/component: reports-controller
            io.kubernetes.pod.namespace: kyverno
        - matchLabels:
            app.kubernetes.io/managed-by: trivy-operator
            io.kubernetes.pod.namespace: trivy-system
        - matchLabels:
            image-digest-audit: "true"
            io.kubernetes.pod.namespace: argo
        - matchLabels:
            renovate: "true"
            io.kubernetes.pod.namespace: argo
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8001"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app: harbor
            component: core
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: harbor
            component: portal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
